pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: website-pod
  labels:
    app: website
spec:
  containers:
  - name: backend
    image: website-backend:latest
    ports:
    - containerPort: 5000
      name: api
    volumeMounts:
    - name: data
      mountPath: /data

  - name: frontend
    image: website-frontend:latest
    ports:
    - containerPort: 5173
      name: web
  volumes:
  - name: data
    emptyDir: {}
