frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 5173
    targetPort: 5173
    protocol: TCP
  sessionAffinity: None
